devops-microservices/k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 3004
      targetPort:
