devops-microservices/k8s/product-service.yml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
    - protocol: TCP
      port: 3003
      targetPort:
