devops-microservices/k8s/user-service.yml
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    app: user
  ports:
    - protocol: TCP
      port: 3002
      targetPort:
